# minecone3

./: Cargo.toml  out.txt
assets/shaders/: block_fragment_shader.wgsl  block_shader.wgsl
assets/textures/: dirt_v1.xcf  dirt_v2.xcf  grass_side_v1.xcf  grass_side_v2.xcf  grass_v1.xcf  stone_v1.xcf
assets/textures/ui/: crosshair.xcf
src/: main.rs
src/lib/: camera_controls.rs  debug.rs  mod.rs  task.rs  types.rs
src/lib/blocks/: air.rs  block_storage.rs  dirt.rs  grass.rs  mod.rs  stone.rs  utils.rs
src/lib/items/: debug_miner.rs  mod.rs  systems.rs
src/lib/meshing/: chunk_area.rs  mod.rs
src/lib/physics/: mod.rs
src/lib/player/: camera_controller.rs  inventory.rs  mod.rs
src/lib/render/: material.rs  mod.rs  texture_map.rs
src/lib/ui/: mod.rs
src/lib/world/: chunk.rs  chunk_loader.rs  chunk_region.rs  locked_chunk_area.rs  mod.rs  world.rs
src/lib/worldgen/: mod.rs  noise_cache_2d.rs
src/lib/worldgen/biomes/: block_layers.rs  grasslands.rs  mod.rs
