[package]
name = "minecone"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/mod.rs"

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
# bevy = "0.11.0"
bevy-inspector-egui = "0.19.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
crossbeam = "0.8.2"
dashmap = "5.4.0"
derive_more = "0.99.17"
futures-lite = "1.13.0"
image = "0.24.6"
noise = "0.8.2"
num_cpus = "1.16.0"
parking_lot = "0.12.1"
rand = "0.8.5"
rustc-hash = "1.1.0"
strum = { version = "0.25", features = ["derive"] }


[profile.dev.package."*"]
opt-level = 3
